[gd_scene load_steps=27 format=3 uid="uid://inu73s3s06mb"]

[ext_resource type="Script" path="res://enemies/test_enemy.gd" id="1_r0tn7"]
[ext_resource type="Resource" uid="uid://whxcfcfi4nsm" path="res://enemies/enemy_attack.tres" id="2_7m5pa"]
[ext_resource type="Script" path="res://common/hurtbox.gd" id="3_bkg8i"]
[ext_resource type="Script" path="res://common/health.gd" id="4_25mqy"]
[ext_resource type="Script" path="res://common/hitbox.gd" id="5_l5uib"]
[ext_resource type="Script" path="res://enemies/Schmovosaur Enemy AI Manager.gd" id="6_55f82"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_q5uni"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4538d"]
diffuse_mode = 3
albedo_color = Color(0.921569, 0.341176, 0.341176, 1)
emission = Color(1, 1, 1, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6xy7g"]
material = SubResource("StandardMaterial3D_4538d")

[sub_resource type="SphereShape3D" id="SphereShape3D_rkgf4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_on81c"]
transparency = 4
blend_mode = 1
albedo_color = Color(0.545098, 0.952941, 0.952941, 0.337255)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_aous3"]
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3(1, 1, 0)
spread = 30.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 45.18
angle_min = 379.3
angle_max = 379.3
color = Color(0.219608, 0.588235, 0.443137, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ikeic"]
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_y0lqa"]
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3(1, 1, 0)
spread = 25.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 5.0

[sub_resource type="SphereMesh" id="SphereMesh_7sk44"]
radius = 0.1
height = 0.1

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_g0es1"]
radius = 0.610806
height = 2.10739

[sub_resource type="Animation" id="Animation_38soa"]
length = 0.001
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:surface_material_override/0")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/CollisionShape3D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox/CollisionShape3D:shape:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.924626, 0.7153, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hitbox/CollisionShape3D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.490013, 0, 0)]
}

[sub_resource type="Animation" id="Animation_qh6ik"]
resource_name = "attack"
length = 0.50001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 1.309), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/CollisionShape3D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/CollisionShape3D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.924626, 0.7153, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox/CollisionShape3D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.490013, 0, 0)]
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_c2rqt"]
emission_enabled = true
emission = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_4mvm1"]
resource_name = "stagger"
length = 0.300005
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0.174254), Vector3(0, 0, -0.174533), Vector3(0, 0, 0.0840202), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("MeshInstance3D:surface_material_override/0")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [SubResource("StandardMaterial3D_c2rqt"), SubResource("StandardMaterial3D_c2rqt"), null]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o72sg"]
_data = {
"RESET": SubResource("Animation_38soa"),
"attack": SubResource("Animation_qh6ik"),
"stagger": SubResource("Animation_4mvm1")
}

[sub_resource type="ViewportTexture" id="ViewportTexture_64m1x"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vuyvo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8mvbw"]
bg_color = Color(0.32549, 0.741176, 0.462745, 1)

[sub_resource type="Theme" id="Theme_hxsbk"]
ProgressBar/styles/background = SubResource("StyleBoxEmpty_vuyvo")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_8mvbw")

[sub_resource type="BoxShape3D" id="BoxShape3D_bmele"]
size = Vector3(0.924626, 0.7153, 1)

[node name="TestEnemy" type="CharacterBody3D"]
collision_layer = 16
script = ExtResource("1_r0tn7")
attack = ExtResource("2_7m5pa")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00357932, 0)
shape = SubResource("CapsuleShape3D_q5uni")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_6xy7g")

[node name="EnemyComponents" type="Node3D" parent="MeshInstance3D"]

[node name="PlayerDetectionSphere" type="Area3D" parent="MeshInstance3D/EnemyComponents"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/EnemyComponents/PlayerDetectionSphere"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0, 0)
shape = SubResource("SphereShape3D_rkgf4")

[node name="Translucent Sphere" type="CSGSphere3D" parent="MeshInstance3D/EnemyComponents/PlayerDetectionSphere/CollisionShape3D"]
material = SubResource("StandardMaterial3D_on81c")

[node name="Charge Particles" type="GPUParticles3D" parent="MeshInstance3D/EnemyComponents"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.475144, 0)
lifetime = 0.5
speed_scale = 1.5
process_material = SubResource("ParticleProcessMaterial_aous3")
draw_pass_1 = SubResource("BoxMesh_ikeic")

[node name="Charge Preparation Particles" type="GPUParticles3D" parent="MeshInstance3D/EnemyComponents"]
process_material = SubResource("ParticleProcessMaterial_y0lqa")
draw_pass_1 = SubResource("SphereMesh_7sk44")

[node name="Hurtbox" type="Area3D" parent="." node_paths=PackedStringArray("health")]
collision_layer = 64
collision_mask = 4
script = ExtResource("3_bkg8i")
health = NodePath("../Health")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hurtbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00948918, 0)
shape = SubResource("CapsuleShape3D_g0es1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o72sg")
}

[node name="Health" type="Node" parent="." node_paths=PackedStringArray("display")]
script = ExtResource("4_25mqy")
max_health = 100
display = NodePath("../SubViewport/ProgressBar")

[node name="HealthDisplay" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.23996, 0)
billboard = 1
texture = SubResource("ViewportTexture_64m1x")

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
size = Vector2i(100, 15)

[node name="ProgressBar" type="ProgressBar" parent="SubViewport"]
offset_right = 100.0
offset_bottom = 15.0
theme = SubResource("Theme_hxsbk")
value = 100.0
show_percentage = false

[node name="Hitbox" type="Area3D" parent="."]
collision_layer = 32
collision_mask = 0
script = ExtResource("5_l5uib")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.490013, 0, 0)
shape = SubResource("BoxShape3D_bmele")
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Enemy AI Manager" type="Node" parent="."]
script = ExtResource("6_55f82")

[node name="Charge Cooldown" type="Timer" parent="Enemy AI Manager"]
wait_time = 3.0
one_shot = true

[node name="Prepare Charge" type="Timer" parent="Enemy AI Manager"]
one_shot = true

[node name="Charge Duration" type="Timer" parent="Enemy AI Manager"]
wait_time = 0.9
one_shot = true

[node name="SpawnPointMarker" type="Node3D" parent="."]
visible = false

[node name="CSGBox3D" type="CSGBox3D" parent="SpawnPointMarker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.489979, 0)

[connection signal="hit" from="Hurtbox" to="." method="_on_hurtbox_hit"]
[connection signal="death" from="Health" to="." method="_on_health_death"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Enemy AI Manager/Charge Cooldown" to="Enemy AI Manager" method="_on_charge_cooldown_timeout"]
[connection signal="timeout" from="Enemy AI Manager/Charge Cooldown" to="Enemy AI Manager" method="_on_charge_duration_timeout"]
[connection signal="timeout" from="Enemy AI Manager/Prepare Charge" to="Enemy AI Manager" method="_on_prepare_charge_timeout"]
[connection signal="timeout" from="Enemy AI Manager/Charge Duration" to="Enemy AI Manager" method="_on_charge_duration_timeout"]
